  * Moloch >= 2.0.0 requires NodeJS 10.x
  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading

2.4.0 2020/08/xx
  - NOTE - RHEL/Centos 6 is no longer supported, Node 12 required
  - release - node 12.18.2, glib 2.64.3, curl 7.71.1
  - viewer - aes256Encryption now defaults to true
  - viewer - added a clear cache button to ES Admin tab
  - viewer - quote expressions with [ or ] in them
  - capture - http2 decoding for PRI * h2 sessions
  - capture - set http2 protocol when alpn is h2
  - capture - upgrade h2c http2 decoding
  - capture - ES Nodes can now show shards/segments per node
  - capture - no longer use internal libpcap function
  - wise - simple UI

2.3.2 2020/06/29
  - NOTE - 2.3.x will be the last version to support RHEL/Centos 6
  - release - node 10.21.0
  - capture - minor tcp dns parsing performance improvement
  - capture - refactor some code to be more type safe
  - capture - deal with bad utf8/puny in dns and altnames
  - viewer - warn at starting about missing ./vueapp/dist/index.html
  - viewer - can now use db:<dbFieldName> in expressions (PR #1463)
  - viewer - if esAdminUsers isn't set, ES Admin tab now shows up for admins
  - viewer - ES Nodes can display molochzone attribute now
  - viewer - fixed some Users tab issues
  - viewer - fix percentage sorting on ES Recovery tab
  - viewer - "right click" actions can how show text in menu with fetch actionType
  - viewer - "Reverse DNS" menu option on ips

2.3.1 2020/05/27
  - all - Lots of changes to support node 12 in the future (thanks rnbwdsh)
  - viewer - fix bug where the next query after an empty query might hang the UI
  - viewer - use the same eslint as the UI & parliament, lots of lines changed
  - viewer - can now modify or delete a view from the popup