@@ -54,6 +54,7 @@ plugins=test.so;tagger.so;wise.so;scrubspi.so
 cronQueries=true
 dontSaveBPFs=port 12345
 viewUrl=http://localhost:8123
+gapPacketPos=false
 
 [testuser]
 pcapWriteMethod=simple
